--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
   "homepage": "https://github.com/marsrays/Line_Bot#readme",
   "dependencies": {
     "express": "^4.15.2",
-    "linebot": "^1.3.0"
+    "line-messaging": "^1.1.8"
   }
 }
