--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.15.2",
     "get-json": "0.0.3",
-    "linebot": "^1.3.0"
+    "linebot": "^1.3.0",
+    "cheerio": "0.22.0"
   }
 }
