--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.15.2",
     "get-json": "0.0.3",
     "linebot": "^1.3.0",
-    "cheerio": "0.22.0"
+    "cheerio": "0.22.0",
+    "request": "2.81.0"
   }
 }
